--- a/style.css
+++ b/style.css
@@ -1,65 +1,69 @@
 /* Basic Style */
-body {
+.tasks-body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.header__matrix {
   width: 100%;
 }
 
-.aaa .more_inf {
+.header__more-info {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
 
-  .aaa { 
+  .header { 
     text-align: center;
   }
 
 }
 
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
 
-.task {
+.add-tasks__input,
+.task-item__label,
+.task-item__input {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.add-tasks__wrapper {
   display: flex;
 }
 
-ul {
+.todo-tasks__list,
+.completed-tasks__list {
   margin: 0;
   padding: 0;
 }
 
-li, 
-h3 {
+.task-item {
   list-style: none;
 }
 
-input,
-button {
+.add-tasks__input,
+.task-item__checkbox,
+.task-item__input,
+.button {
   outline: none;
 }
 
-button {
+.button {
   background: none;
   border: 0;
   color: #888;
@@ -69,13 +73,12 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.button:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+.section-title  {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -85,7 +88,8 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.add-tasks__input,
+.task-item__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -98,76 +102,78 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.task-item__input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.section-title {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+.add-tasks__input {
   width: 318px;
 }
 
 /* Task list */
-li {
+.task-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-li > * {
+.task-item__checkbox {
+  margin: 0 10px;
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
-  margin: 0 10px;
-}
-
-li > label {
+.task-item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
+  vertical-align: middle;
 }
 
-li >  input[type="text"] {
+.task-item__input {
   width: 226px;
+  vertical-align: middle;
 }
 
-button.delete img {
+.task-item__button {
+  vertical-align: middle;
+}
+
+.button__remove-icon {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.button__remove-icon:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.completed-tasks__list .task-item__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task-item .task-item__input {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+.task-item.edit-mode .task-item__input {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.task-item.edit-mode .task-item__label {
   display: none;
 }
